Added service page

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,5 @@
+@import "../../variables.scss";
+
 .about_page {
   .main_wrapper {
     margin-top: 50px;
@@ -5,14 +7,18 @@
     .about_wrapper {
       .img_con {
         width: 100%;
-        height: 500px;
-        margin: 30px 0;
+        height: fit-content;
+        margin: 50px 0;
       }
 
       .txt_con {
         h3 {
           text-transform: capitalize;
           font-size: 30px;
+
+          span {
+            color: $primary_color;
+          }
 
           @media (max-width: 768px) {
             font-size: 25px;
@@ -23,18 +29,22 @@
           display: flex;
           flex-direction: column;
           gap: 10px;
-          margin-top: 20px;
+          margin-top: 15px;
         }
       }
     }
 
     .team_wrapper {
-      margin-top: 50px;
+      margin-top: 100px;
 
       h2 {
         text-align: center;
         text-transform: capitalize;
         font-size: 30px;
+
+        span {
+          color: $primary_color;
+        }
 
         @media (max-width: 768px) {
           font-size: 25px;
@@ -83,6 +93,7 @@
               font-size: 15px;
               font-weight: 500;
               text-align: center;
+              padding-top: 0;
             }
           }
         }
