--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 
   font-family: "Albert Sans", sans-serif;
+  // font-family: "Poppins", sans-serif;
 }
 
 h1,
@@ -16,6 +19,11 @@ h3,
 h4,
 h5 {
   color: $secondary_color;
+  font-family: "Poppins", sans-serif;
+
+  span {
+    font-family: "Poppins", sans-serif;
+  }
 }
 
 p {
