--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,13 @@
   // font-family: "Poppins", sans-serif;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+  background: white;
+  padding-bottom: 100px;
+}
+
 h1,
 h2,
 h3,
