--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -11,9 +11,11 @@
         display: flex;
         align-items: center;
         gap: 30px;
+        background: whitesmoke;
 
         &:nth-child(odd) {
           flex-direction: row-reverse;
+          background: white;
         }
 
         .img {
