--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -106,6 +106,10 @@
             display: flex;
             align-items: center;
             gap: 20px;
+
+            @media (max-width: 425px) {
+              flex-direction: column;
+            }
           }
 
           .input_con {
@@ -114,6 +118,7 @@
             border-radius: 5px;
             overflow: hidden;
             flex: 1;
+            width: 100%;
 
             input,
             textarea {
@@ -139,6 +144,22 @@
           }
         }
       }
+
+      @media (max-width: 900px) {
+        flex-direction: column;
+
+        .txt_con {
+          width: 100%;
+        }
+
+        .form_section {
+          width: 100%;
+        }
+      }
+    }
+
+    @media (max-width: 900px) {
+      margin-top: 50px;
     }
   }
 }
