--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,21 @@
 @import "../../variables.scss";
 
 .home_page {
+  h2 {
+    font-size: 25px;
+
+    @media (max-width: 768px) {
+      font-size: 20px;
+    }
+
+    @media (max-width: 500px) {
+      font-size: 18px;
+    }
+  }
+
   .home_section {
     width: 100%;
-    min-height: 100vh;
-    height: 100%;
+    height: fit-content;
     background-image: url("../../assets/homebg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,6 +28,7 @@
 
       .container {
         padding-top: 230px;
+        padding-bottom: 100px;
 
         .txt_con {
           width: 65%;
@@ -90,11 +102,11 @@
 
   // about section
   .about_section {
-    margin-top: 50px;
+    margin-top: 70px;
     .container {
       display: flex;
       align-items: center;
-      gap: 30px;
+      gap: 20px;
 
       .txt_con {
         width: 50%;
@@ -109,7 +121,6 @@
 
         h2 {
           text-transform: capitalize;
-          font-size: 25px;
           padding-top: 5px;
         }
 
@@ -120,6 +131,16 @@
 
       .img_con {
         width: 50%;
+        border-radius: 10px;
+        overflow: hidden;
+
+        @media (max-width: 500px) {
+          height: 300px;
+        }
+
+        @media (max-width: 425px) {
+          height: 240px;
+        }
       }
 
       @media (max-width: 900px) {
@@ -131,6 +152,102 @@
 
         .img_con {
           width: 100%;
+        }
+      }
+    }
+  }
+
+  // services
+  .services_wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
+
+    .service_con {
+      background: whitesmoke;
+      padding: 70px 0;
+
+      &:nth-child(2) {
+        background: white;
+        .container {
+          flex-direction: row;
+        }
+      }
+      .container {
+        display: flex;
+        gap: 30px;
+        flex-direction: row-reverse;
+        align-items: center;
+      }
+
+      .img_con {
+        width: 50%;
+        height: 350px;
+        border-radius: 10px;
+      }
+
+      .txt_con {
+        width: 50%;
+
+        small {
+          padding: 10px 20px;
+          background: #2b86c7ad;
+          border-radius: 20px;
+          color: white;
+          text-transform: capitalize;
+          font-size: 13px;
+        }
+
+        h2 {
+          margin-top: 20px;
+        }
+
+        p {
+          padding: 15px 0 20px 0;
+        }
+
+        ul {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          li {
+            display: flex;
+            gap: 5px;
+
+            list-style: none;
+          }
+        }
+      }
+
+      @media (max-width: 900px) {
+        &:nth-child(2) {
+          .container {
+            flex-direction: column-reverse;
+          }
+        }
+        .container {
+          flex-direction: column-reverse;
+        }
+
+        .img_con {
+          width: 100%;
+        }
+
+        .txt_con {
+          width: 100%;
+        }
+      }
+
+      @media (max-width: 500px) {
+        .img_con {
+          height: 300px;
+        }
+      }
+
+      @media (max-width: 435px) {
+        .img_con {
+          height: 240px;
         }
       }
     }
