Edited about page. Making it more responsive

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -4,50 +4,52 @@
   .main_wrapper {
     margin-top: 50px;
 
+    // about wrapper
     .about_wrapper {
-      .img_con {
-        width: 100%;
-        height: fit-content;
-        margin: 50px 0;
-      }
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
 
-      .txt_con {
-        h3 {
+      .con {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 10px;
+        h2 {
           text-transform: capitalize;
-          font-size: 30px;
-
-          span {
-            color: $primary_color;
-          }
-
-          @media (max-width: 768px) {
-            font-size: 25px;
-          }
+        }
+        p {
+          padding: 15px 0 20px 0;
         }
 
-        .txt {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-          margin-top: 15px;
+        .img_con {
+          border-radius: 10px;
+          height: 500px;
+
+          @media (max-width: 900px) {
+            height: 350px;
+          }
+
+          @media (max-width: 500px) {
+            height: 300px;
+          }
+
+          @media (max-width: 425px) {
+            height: 240px;
+          }
         }
       }
     }
 
+    // team wrapper
     .team_wrapper {
       margin-top: 100px;
 
       h2 {
         text-align: center;
         text-transform: capitalize;
-        font-size: 30px;
 
         span {
           color: $primary_color;
-        }
-
-        @media (max-width: 768px) {
-          font-size: 25px;
         }
       }
 
@@ -60,8 +62,10 @@
       }
 
       .teams_box_con {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 30px;
         margin-top: 40px;
 
@@ -69,12 +73,12 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          gap: 15px;
+          gap: 10px;
           flex-direction: column;
 
           .img {
-            width: 200px;
-            height: 200px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             overflow: hidden;
             object-position: center;
@@ -84,7 +88,7 @@
           .txt {
             h4 {
               text-transform: capitalize;
-              font-size: 16px;
+              font-size: 15px;
               text-align: center;
             }
 
@@ -99,16 +103,10 @@
         }
 
         @media (max-width: 1024px) {
-          grid-template-columns: repeat(3, 1fr);
-
           .box .img {
             width: 150px;
             height: 150px;
           }
-        }
-
-        @media (max-width: 768px) {
-          grid-template-columns: repeat(2, 1fr);
         }
 
         @media (max-width: 500px) {
@@ -116,10 +114,6 @@
             .img {
               width: 100px;
               height: 100px;
-            }
-
-            .txt h4 {
-              font-size: 15px;
             }
           }
         }
