--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -24,6 +24,16 @@
 
       .img {
         width: 50%;
+        border-radius: 10px;
+        height: 350px;
+
+        @media (max-width: 500px) {
+          height: 300px;
+        }
+
+        @media (max-width: 435px) {
+          height: 240px;
+        }
       }
 
       .txt_con {
