--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,18 @@ h5 {
   }
 }
 
+h2 {
+  font-size: 25px;
+
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 18px;
+  }
+}
+
 p,
 li {
   font-size: 16px;
@@ -97,7 +109,7 @@ button {
   background-size: cover;
 
   .wrapper {
-    background: #0d3151ca;
+    background: rgba(0, 0, 0, 0.781);
     height: inherit;
 
     .container {
@@ -105,7 +117,7 @@ button {
 
       h2 {
         text-transform: capitalize;
-        font-size: 30px;
+        font-size: 25px;
         color: white;
       }
 
@@ -117,7 +129,7 @@ button {
 
       @media (max-width: 768px) {
         h2 {
-          font-size: 25px;
+          font-size: 20px;
         }
 
         p {
