--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,6 @@ body {
   width: 100%;
   height: 100%;
   background: white;
-  padding-bottom: 100px;
 }
 
 h1,
@@ -62,7 +61,7 @@ li {
 img {
   width: 100%;
   height: 100%;
-  border-radius: inherit;
+  border-radius: inherit !important;
 }
 
 .check_mark {
@@ -109,7 +108,7 @@ button {
   background-size: cover;
 
   .wrapper {
-    background: rgba(0, 0, 0, 0.781);
+    background: rgba(0, 0, 0, 0.719);
     height: inherit;
 
     .container {
