--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -17,8 +17,11 @@
         h2 {
           text-transform: capitalize;
         }
-        p {
+        .txt {
           padding: 15px 0 20px 0;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
         }
 
         .img_con {
