--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,15 @@
 }
 
 body {
-  width: 100%;
   height: 100%;
   background: white;
+  width: 100vw !important;
+  overflow-x: hidden !important;
+}
+
+.main_app {
+  width: 100vw !important;
+  overflow-x: hidden !important;
 }
 
 h1,
