--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,15 @@
 @import "./variables.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Albert Sans", sans-serif;
+  // font-family: "Montserrat", sans-serif;
+  font-family: "Quicksand", sans-serif;
+  // font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -51,7 +53,7 @@ p,
 li {
   font-size: 16px;
   color: $secondary_color_alt;
-  line-height: 23px;
+  // line-height: 23px;
   font-weight: 500;
 }
 
