--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -109,21 +109,16 @@
       .txt_con {
         width: 50%;
 
-        span {
-          color: $primary_color;
-          text-transform: uppercase;
-          font-size: 15px;
-          font-weight: 600;
-          letter-spacing: 5px;
-        }
-
         h2 {
           text-transform: capitalize;
           padding-top: 5px;
         }
 
-        p {
+        .txt {
           padding: 15px 0 20px 0;
+          display: flex;
+          flex-direction: column;
+          gap: 6px;
         }
       }
 
