Edited home page

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -8,6 +8,7 @@ nav {
   background: transparent;
   background: white;
   border-bottom: 1px solid rgb(212, 209, 209);
+  // display: none;
 
   .container {
     display: flex;
