--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,14 @@
 @import "./variables.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
-  // font-family: "Montserrat", sans-serif;
-  font-family: "Quicksand", sans-serif;
-  // font-family: "Poppins", sans-serif;
+
+  font-family: "Pathway Extreme", sans-serif;
 }
 
 body {
@@ -30,11 +29,6 @@ h3,
 h4,
 h5 {
   color: $secondary_color;
-  font-family: "Poppins", sans-serif;
-
-  span {
-    font-family: "Poppins", sans-serif;
-  }
 }
 
 h2 {
@@ -51,10 +45,10 @@ h2 {
 
 p,
 li {
-  font-size: 16px;
+  font-size: 15px;
   color: $secondary_color_alt;
-  // line-height: 23px;
-  font-weight: 500;
+  line-height: 25px;
+  font-weight: 450;
 }
 
 .container {
