--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,22 +4,20 @@
   .home_section {
     width: 100%;
     height: fit-content;
-    background-image: url("../../assets/homebg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
 
-    .wrapper {
-      background: #0d3151ca;
-      min-height: inherit;
-      height: 100%;
-      width: 100%;
+    .main_wrapper {
+      background: #020e19;
 
       .container {
-        padding-top: 230px;
-        padding-bottom: 150px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 30px;
+        padding-top: 150px;
+        padding-bottom: 70px;
 
         .txt_con {
-          width: 60%;
+          width: 50%;
 
           h1 {
             font-size: 40px;
@@ -31,67 +29,190 @@
           }
 
           p {
-            padding: 20px 0;
             color: white;
-            line-height: 25px;
+            padding: 20px 0 30px 0;
           }
 
           .btns {
             display: flex;
             align-items: center;
             gap: 20px;
-            margin-top: 15px;
 
             button {
               border: 2px solid transparent;
-
-              &:hover {
-                background: white;
-                color: $primary_color;
-              }
-
               &:first-child {
                 background: transparent;
                 color: white;
                 border-color: white;
-
-                &:hover {
-                  background: white;
-                  color: $primary_color;
-                }
               }
             }
+          }
+        }
 
-            @media (max-width: 325px) {
-              flex-direction: column;
+        .img_wrapper {
+          width: 50%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-              button {
-                width: 100%;
-                align-items: center;
-                justify-content: center;
+          .img_box_con {
+            background: transparent;
+            height: 500px;
+            width: 500px;
+            position: relative;
+            border-radius: 50%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+
+            &::before {
+              content: "";
+              position: absolute;
+              height: 150px;
+              width: 150px;
+              background: $primary_color;
+              transition: 0.4s ease;
+              border: none;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+            }
+
+            .img {
+              position: relative;
+
+              img {
+                z-index: 2;
+                border-radius: 50% 0 50% 0 !important;
+                width: 200px;
+                height: 200px;
+                position: absolute;
+              }
+
+              &:nth-child(1) img {
+                bottom: 0;
+                right: 0;
+              }
+
+              &:nth-child(2) img {
+                bottom: 0;
+                left: 0;
+              }
+
+              &:nth-child(3) img {
+                right: 0;
+                top: 0;
+              }
+
+              &:nth-child(4) img {
+                top: 0;
+                left: 0;
+              }
+            }
+          }
+        }
+
+        @media (max-width: 1200px) {
+          .txt_con h1 {
+            font-size: 30px;
+          }
+
+          .img_wrapper .img_box_con .img img {
+            width: 170px;
+            height: 170px;
+          }
+        }
+
+        @media (max-width: 1100px) {
+          .img_wrapper .img_box_con .img img {
+            width: 140px;
+            height: 140px;
+          }
+        }
+
+        @media (max-width: 900px) {
+          .img_wrapper {
+            display: none;
+          }
+
+          .txt_con {
+            width: 90%;
+          }
+        }
+
+        @media (max-width: 500px) {
+          .txt_con {
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    .partners_section {
+      background: $bg_color_alt;
+      .container {
+        display: flex;
+        align-items: center;
+        padding: 30px 0;
+        width: 100%;
+        padding-right: 5%;
+
+        .txt_con {
+          min-width: 300px;
+          padding-left: 5%;
+
+          p {
+            font-size: 16px;
+            font-weight: 500;
+          }
+
+          h3 {
+            font-size: 18px;
+            white-space: nowrap;
+          }
+        }
+
+        .swiper_wrapper {
+          width: calc(100% - 300px);
+
+          .swiper_con {
+            .box {
+              height: 100px;
+              width: 150px;
+              border: 1px solid rgb(207, 205, 205);
+              padding: 20px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border-radius: 5px;
+              overflow: hidden;
+
+              img {
+                width: 70px;
+                height: fit-content;
               }
             }
           }
         }
 
         @media (max-width: 900px) {
-          .txt_con {
-            text-align: center;
+          .swiper_wrapper {
             width: 100%;
+            padding: 0 5%;
 
-            h1 {
-              font-size: 35px;
-            }
+            .swiper_con .box {
+              height: 80px;
+              width: 100px;
 
-            .btns {
-              justify-content: center;
+              img {
+                width: 50px;
+              }
             }
           }
-        }
 
-        @media (max-width: 500px) {
-          .txt_con h1 {
-            font-size: 25px;
+          .txt_con {
+            display: none;
           }
         }
       }
