--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -26,8 +26,11 @@
             font-size: 25px;
           }
 
-          p {
+          .txt {
             padding: 15px 0 25px 0;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
           }
 
           ul {
