--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $primary_color: #2b86c7;
 $secondary_color: #0d3151;
-$secondary_color_alt: #0d3151c6;
+$secondary_color_alt: #0d3151ec;
 $bg_color: white;
-$bg_color_alt: whitesmoke;
+$bg_color_alt: #2b86c70b;
+$bg_color_alt2: whitesmoke;
