Edited partner section

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -190,7 +190,7 @@
 
               img {
                 width: 70px;
-                height: fit-content;
+                height: 25px;
               }
             }
           }
