--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 @import "../../variables.scss";
 
 .home_page {
+  // HOME SECTION STARTS HERE
   .home_section {
     width: 100%;
     height: fit-content;
@@ -241,7 +242,9 @@
     }
   }
 
-  // about section
+  // HOME SECTION ENDS HERE
+
+  // ABOUT SECTION STARTS HERE
   .about_section {
     margin-top: 70px;
     .container {
@@ -269,6 +272,7 @@
         width: 50%;
         border-radius: 10px;
         overflow: hidden;
+        height: 400px;
 
         @media (max-width: 500px) {
           height: 300px;
@@ -292,19 +296,24 @@
       }
     }
   }
+  // ABOUT SECTION ENDS HERE
 
-  // services
+  // SERVICES SECTION STARTS HERE
   .services_wrapper {
     display: flex;
     flex-direction: column;
+    background: $bg_color_alt2;
+    padding: 70px 0;
     margin-top: 70px;
 
     .service_con {
-      background: whitesmoke;
-      padding: 70px 0;
+      margin-top: 70px;
+
+      &:nth-child(1) {
+        margin-top: 0;
+      }
 
       &:nth-child(2) {
-        background: white;
         .container {
           flex-direction: row;
         }
@@ -318,51 +327,27 @@
 
       .img_con {
         width: 50%;
-        height: 350px;
+        height: 400px;
         border-radius: 10px;
       }
 
       .txt_con {
         width: 50%;
 
-        small {
-          padding: 10px 20px;
-          background: #2b86c7ad;
-          border-radius: 20px;
-          color: white;
-          text-transform: capitalize;
-          font-size: 13px;
-        }
-
-        h2 {
-          margin-top: 20px;
-        }
-
         p {
           padding: 15px 0 20px 0;
-        }
-
-        ul {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-
-          li {
-            display: flex;
-            gap: 5px;
-
-            list-style: none;
-          }
         }
       }
 
       @media (max-width: 900px) {
         &:nth-child(2) {
           .container {
+            gap: 20px;
             flex-direction: column-reverse;
           }
         }
         .container {
+          gap: 20px;
           flex-direction: column-reverse;
         }
 
@@ -388,4 +373,5 @@
       }
     }
   }
+  // SERVICES SECTION ENDS HERE
 }
