--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,137 +2,58 @@
 
 footer {
   margin-top: 70px;
+
   .section1 {
-    border-top: 1px solid rgb(220, 218, 218);
-    border-bottom: 1px solid rgb(220, 218, 218);
-    padding: 30px 0;
+    background: $bg_color_alt2;
+    padding: 70px 0;
 
     .container {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      .txt {
-        p {
-          text-transform: capitalize;
-        }
-
-        h2 {
-          text-transform: capitalize;
-        }
-      }
-
-      @media (max-width: 425px) {
-        flex-direction: column;
-        gap: 20px;
-      }
-    }
-  }
-
-  .section2 {
-    padding: 50px 0;
-    background: whitesmoke;
-    .container {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
       gap: 30px;
-      justify-content: space-between;
 
-      .box1 {
+      .box {
         display: flex;
         flex-direction: column;
-        gap: 20px;
-        min-width: 300px;
-        max-width: 400px;
-        flex: 1;
-
-        .logo {
-          width: 130px;
-          height: 40px;
-        }
-      }
-
-      .box2 {
-        display: flex;
-        gap: 20px;
-        flex-direction: column;
-        flex: 1;
-
-        min-width: 100px;
-        max-width: 200px;
-        width: 100%;
+        gap: 15px;
 
         h3 {
           text-transform: capitalize;
-          font-size: 15px;
+          font-weight: 600;
+          font-size: 16px;
         }
 
-        .links {
+        .con {
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: 15px;
 
           a {
             text-transform: capitalize;
-            font-weight: 500;
+            font-size: 16px;
+            font-weight: 450;
             color: $secondary_color_alt;
+            transition: 0.4s ease;
 
             &:hover {
               color: $primary_color;
             }
           }
-        }
-      }
-
-      .box3 {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        flex: 1;
-
-        min-width: 100px;
-        max-width: 200px;
-        width: 100%;
-
-        h3 {
-          text-transform: capitalize;
-          font-size: 15px;
-        }
-
-        div {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
 
           p {
             display: flex;
             align-items: center;
             gap: 5px;
+            font-weight: 450;
 
             span {
-              font-size: 20px;
-              line-height: 0;
+              font-size: 15px;
+              padding-top: 5px;
             }
           }
         }
-      }
 
-      .box4 {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        flex: 1;
-
-        min-width: 150px;
-        max-width: 200px;
-        width: 100%;
-
-        h3 {
-          text-transform: capitalize;
-          font-size: 15px;
-        }
-
-        div {
+        .con2 {
           display: flex;
           align-items: center;
           gap: 20px;
@@ -140,35 +61,43 @@ footer {
           span {
             height: 40px;
             width: 40px;
-            border-radius: 50%;
-            color: white;
-            background: $primary_color;
-            list-style: 0;
             display: flex;
             align-items: center;
             justify-content: center;
+            background: $secondary_color;
+            border-radius: 5px;
+            overflow: hidden;
+            color: white;
             cursor: pointer;
             transition: 0.4s ease;
 
             &:hover {
-              box-shadow: 0 0 5px grey;
+              background: $primary_color;
             }
           }
         }
       }
 
+      @media (max-width: 900px) {
+        grid-template-columns: 1fr 1fr;
+      }
+
       @media (max-width: 500px) {
-        flex-direction: column;
-        gap: 30px;
+        grid-template-columns: 1fr;
       }
     }
   }
 
-  .section3 {
-    padding: 20px;
+  .section2 {
+    padding: 25px 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    background: white;
+
+    p {
+      font-size: 15px;
+      line-height: 0;
+    }
   }
 }
