--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -171,75 +171,6 @@
         }
       }
     }
-
-    .partners_section {
-      background: $bg_color_alt;
-      .container {
-        display: flex;
-        align-items: center;
-        padding: 30px 0;
-        width: 100%;
-        padding-right: 5%;
-
-        .txt_con {
-          min-width: 300px;
-          padding-left: 5%;
-
-          p {
-            font-size: 16px;
-            font-weight: 500;
-          }
-
-          h3 {
-            font-size: 18px;
-            white-space: nowrap;
-          }
-        }
-
-        .swiper_wrapper {
-          width: calc(100% - 300px);
-
-          .swiper_con {
-            .box {
-              height: 100px;
-              width: 150px;
-              border: 1px solid rgb(207, 205, 205);
-              padding: 20px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              border-radius: 5px;
-              overflow: hidden;
-
-              img {
-                width: 70px;
-                height: 25px;
-              }
-            }
-          }
-        }
-
-        @media (max-width: 900px) {
-          .swiper_wrapper {
-            width: 100%;
-            padding: 0 5%;
-
-            .swiper_con .box {
-              height: 80px;
-              width: 100px;
-
-              img {
-                width: 50px;
-              }
-            }
-          }
-
-          .txt_con {
-            display: none;
-          }
-        }
-      }
-    }
   }
 
   // HOME SECTION ENDS HERE
@@ -302,15 +233,15 @@
   .services_wrapper {
     display: flex;
     flex-direction: column;
-    background: $bg_color_alt2;
-    padding: 70px 0;
-    margin-top: 70px;
+    // background: $bg_color_alt2;
+    // padding: 70px 0;
+    // margin-top: 70px;
 
     .service_con {
       margin-top: 70px;
 
       &:nth-child(1) {
-        margin-top: 0;
+        // margin-top: 0;
       }
 
       &:nth-child(2) {
