--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,9 +5,12 @@
   .home_section {
     width: 100%;
     height: fit-content;
+    background-image: url("../../assets/2.jpg");
+    background-size: cover;
+    background-repeat: none;
 
     .main_wrapper {
-      background: #020e19;
+      background: rgba(0, 0, 0, 0.837);
 
       .container {
         display: flex;
@@ -46,114 +49,41 @@
                 background: transparent;
                 color: white;
                 border-color: white;
+                display: none;
               }
             }
           }
 
           .license {
+            display: flex;
+            align-items: center;
+            gap: 5px;
             margin-top: 40px;
 
             p {
-              color: rgb(198, 198, 198);
               font-size: 13px;
+            }
 
-              span {
-                background: rgb(198, 198, 198);
-                color: $secondary_color;
-                padding: 0 5px;
-              }
+            img {
+              width: 50px;
+              height: 30px;
             }
           }
         }
 
-        .img_wrapper {
+        .img_con {
           width: 50%;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-
-          .img_box_con {
-            background: transparent;
-            height: 500px;
-            width: 500px;
-            position: relative;
-            border-radius: 50%;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-
-            &::before {
-              content: "";
-              position: absolute;
-              height: 150px;
-              width: 150px;
-              background: $primary_color;
-              transition: 0.4s ease;
-              border: none;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            }
-
-            .img {
-              position: relative;
-
-              img {
-                z-index: 2;
-                border-radius: 50% 0 50% 0 !important;
-                width: 200px;
-                height: 200px;
-                position: absolute;
-              }
-
-              &:nth-child(1) img {
-                bottom: 0;
-                right: 0;
-              }
-
-              &:nth-child(2) img {
-                bottom: 0;
-                left: 0;
-              }
-
-              &:nth-child(3) img {
-                right: 0;
-                top: 0;
-              }
-
-              &:nth-child(4) img {
-                top: 0;
-                left: 0;
-              }
-            }
-          }
+          display: none;
         }
 
         @media (max-width: 1200px) {
           .txt_con h1 {
             font-size: 30px;
           }
-
-          .img_wrapper .img_box_con .img img {
-            width: 170px;
-            height: 170px;
-          }
-        }
-
-        @media (max-width: 1100px) {
-          .img_wrapper .img_box_con .img img {
-            width: 140px;
-            height: 140px;
-          }
         }
 
         @media (max-width: 900px) {
           padding-top: 110px;
-
-          .img_wrapper {
-            display: none;
-          }
 
           .txt_con {
             width: 90%;
@@ -175,74 +105,13 @@
 
   // HOME SECTION ENDS HERE
 
-  // ABOUT SECTION STARTS HERE
-  .about_section {
-    margin-top: 70px;
-    .container {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-
-      .txt_con {
-        width: 50%;
-
-        h2 {
-          text-transform: capitalize;
-          padding-top: 5px;
-        }
-
-        .txt {
-          padding: 15px 0 20px 0;
-          display: flex;
-          flex-direction: column;
-          gap: 6px;
-        }
-      }
-
-      .img_con {
-        width: 50%;
-        border-radius: 10px;
-        overflow: hidden;
-        height: 400px;
-
-        @media (max-width: 500px) {
-          height: 300px;
-        }
-
-        @media (max-width: 425px) {
-          height: 240px;
-        }
-      }
-
-      @media (max-width: 900px) {
-        flex-direction: column-reverse;
-
-        .txt_con {
-          width: 100%;
-        }
-
-        .img_con {
-          width: 100%;
-        }
-      }
-    }
-  }
-  // ABOUT SECTION ENDS HERE
-
   // SERVICES SECTION STARTS HERE
   .services_wrapper {
     display: flex;
     flex-direction: column;
-    // background: $bg_color_alt2;
-    // padding: 70px 0;
-    // margin-top: 70px;
 
     .service_con {
       margin-top: 70px;
-
-      &:nth-child(1) {
-        // margin-top: 0;
-      }
 
       &:nth-child(2) {
         .container {
