--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,16 @@
 @import "./variables.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
-
-  font-family: "Pathway Extreme", sans-serif;
+  font-family: "Poppins", sans-serif;
+  // font-family: "Pathway Extreme", sans-serif;
 }
 
 body {
@@ -29,6 +31,10 @@ h3,
 h4,
 h5 {
   color: $secondary_color;
+  font-family: "Radio Canada", sans-serif;
+  span {
+    font-family: "Radio Canada", sans-serif;
+  }
 }
 
 h2 {
@@ -144,7 +150,7 @@ button {
 .list_con {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 13px;
 
   li {
     display: flex;
