--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,10 @@
   // font-family: "Pathway Extreme", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100%;
   background: white;
