--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,6 +1,42 @@
 @import "../../variables.scss";
 
 .contact_page {
+  .head {
+    margin-block: 1rem;
+    width: 100%;
+    height: 300px;
+
+    .wrapper {
+      height: inherit;
+
+      .container {
+        padding-top: 150px;
+        text-align: center;
+
+        h2 {
+          text-transform: capitalize;
+          font-size: 50px;
+        }
+
+        p {
+          margin-top: 5px;
+          margin-inline: auto;
+          width: 60%;
+        }
+
+        @media (max-width: 768px) {
+          h2 {
+            font-size: 32px;
+          }
+
+          p {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
   .main_wrapper {
     margin-top: 100px;
     .container {
@@ -35,8 +71,8 @@
             }
 
             .txt {
+              text-transform: capitalize;
               h4 {
-                text-transform: capitalize;
                 font-size: 15px;
               }
             }
