--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,13 +1,52 @@
 @import "../../variables.scss";
 
 .products_page {
+  .head {
+    width: 100%;
+    height: 300px;
+
+    .wrapper {
+      height: inherit;
+
+      .container {
+        padding-top: 150px;
+        text-align: center;
+
+        h2 {
+          text-transform: capitalize;
+          font-size: 50px;
+        }
+
+        p {
+          margin-top: 5px;
+          margin-inline: auto;
+          width: 60%;
+        }
+
+        @media (max-width: 768px) {
+          h2 {
+            font-size: 32px;
+          }
+
+          p {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
   .main_wrapper {
     margin-top: 50px;
 
     .container {
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      gap: 120px;
+
+      @media (max-width: 900px) {
+        gap: 50px;
+      }
 
       .product_con {
         display: flex;
